<resources>
    <string name="app_name">Kepo</string>
    <string name="make_stalking_easier">Make stalking easier!</string>
    <string name="login">Login</string>
    <string name="_2020_by_renaldy_rizalna">© 2020 by Renaldy Rizalna</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="bottom_dialog_title">Bottom Dialog Title</string>
    <string name="bottom_dialog_message">Bottom dialog message</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome, John</string>
    <string name="my_todo">My Todo</string>
    <string name="search_todo">Search Todo</string>
    <string name="search_user">Search User</string>
    <string name="profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="profile_name">john</string>
    <string name="profile_username">john</string>
    <string name="logout">Logout</string>
    <string name="my_todo_title">My Todo</string>
    <string name="here_all_your_todos">Here all your todos!</string>
    <string name="create_to_do">Create To Do</string>
    <string name="detail_todo_title">Detail Todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="textCounter">99/100</string>
    <string name="submit_todo">Submit Todo</string>
    <string name="creater_todo_error_msg">creater_todo_error_msg</string>
    <string name="your_todo_will_be_visible_to_others">Your todo will be visible to others</string>
    <string name="no_data">No data</string>
    <string name="create_todo_title">Create Todo Title</string>
    <string name="last_edited">Last Edited</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="by_user">by user</string>
    <string name="by_todo">by todo</string>
    <string name="search_todo_hint">Search Todo...</string>
    <string name="search_user_hint">Search User...</string>
    <string name="_1_item_s">1 item(s)</string>
    <string name="delete">DELETE</string>
</resources>