<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_dialog">

    <LinearLayout
        style="@style/BottomSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bottom_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_dialog_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:id="@+id/tv_bottom_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_dialog_message">

        </TextView>

        <Button
            android:id="@+id/btn_bottom_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="?android:attr/borderlessButtonStyle">

        </Button>

    </LinearLayout>

</layout>