<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.CreateTodoActivity">
    
    <data>
        <variable
            name="newTodo"
            type="com.example.kepo.model.CreateTodoData" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_back_create_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginBottom="15dp"
                android:background="@color/white">

            </ImageButton>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_todo_title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_todo_will_be_visible_to_others"
                android:textSize="15sp">

            </TextView>

            <EditText
                android:id="@+id/et_todo_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:inputType="text"
                android:hint="@string/title"
                android:text="@={newTodo.title}"
                android:background="@drawable/border"
                android:textCursorDrawable="@drawable/text_cursor">

            </EditText>

            <EditText
                android:id="@+id/et_todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingBottom="100dp"
                android:layout_marginTop="20dp"
                android:hint="@string/description"
                android:text="@={newTodo.description}"
                android:background="@drawable/border"
                android:textCursorDrawable="@drawable/text_cursor">

            </EditText>

            <TextView
                android:id="@+id/textCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="15sp"
                tools:text="@string/textCounter">

            </TextView>

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/red"
                android:textStyle="bold"
                tools:text="@string/creater_todo_error_msg"
                android:visibility="gone">

            </TextView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:outlineSpotShadowColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_check"
            app:tint="@color/white"
            android:contentDescription="@string/submit_todo" />

    </RelativeLayout>

</layout>