<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <data>

        <variable
            name="user"
            type="com.example.kepo.model.UserLoginCredentials" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_sm">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/make_stalking_easier">

            </TextView>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:inputType="text"
                android:hint="@string/username"
                android:text="@={user.username}"
                android:textCursorDrawable="@drawable/text_cursor">

            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={user.password}"
                android:textCursorDrawable="@drawable/text_cursor">

            </EditText>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/login">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_2020_by_renaldy_rizalna">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

</layout>