<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="45dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/welcome_background">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_container"
            android:layout_marginTop="-30dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_my_todo"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_todo"
                android:drawableRight="@drawable/ic_todo"
                android:text="@string/my_todo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white">

            </Button>

            <Button
                android:id="@+id/btn_search_todo"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_search"
                android:drawableRight="@drawable/ic_search"
                android:text="@string/search_todo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:textSize="10sp"
                android:backgroundTint="@color/white">

            </Button>

            <Button
                android:id="@+id/btn_search_user"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_people"
                android:drawableRight="@drawable/ic_people"
                android:text="@string/search_user"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:textSize="10sp"
                android:backgroundTint="@color/white">

            </Button>

            <Button
                android:id="@+id/btn_profile"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_face"
                android:drawableRight="@drawable/ic_face"
                android:text="@string/profile"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:backgroundTint="@color/white">

            </Button>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/_2020_by_renaldy_rizalna"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/status_bar_color"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

        </TextView>

    </RelativeLayout>

</layout>