<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_no_data_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_centerInParent="true"
            android:visibility="gone">

        </TextView>

        <LinearLayout
            android:id="@+id/my_todo_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_back_my_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                style="@style/ShapeAppearance.MaterialComponents.Tooltip">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_todo_title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/here_all_your_todos">

            </TextView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_todo_header">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:outlineSpotShadowColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_add"
            app:tint="@color/white"
            android:contentDescription="@string/create_to_do" />

    </RelativeLayout>

</layout>